# pyDSV

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  workflow.yml
pyDSV/: __init__.py  csvLoader.py  dsvTransformer.py
tests/: __init__.py  test_csvLoader.py  test_dsvTransformer.py
